Kcore, Findbridge and conductance finished.

--- a/arachne/arachne_sample.ipynb
+++ b/arachne/arachne_sample.ipynb
@@ -27,8 +27,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "163f833f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import arkouda as ak\n",
+    "import arachne as ar\n",
+    "import scipy as sp\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
+    "ak.connect(\"n115\", 5555)\n",
+    "# Create an Arachne graph from a test network file.\n",
+    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"/scratch/users/md724/DataSets/UIUC/oc_integer/oc_integer_cleaned_el.tsv\"))\n",
+    "print(\"graph loaded\")\n",
+    "# Execute wcc with the absolute path to the generate and the create network file.\n",
+    "file_path = os.path.abspath(\"/scratch/users/md724/DataSets/UIUC/oc_integer/S2_oc_leiden.0.001_i2_clustering.tsv\")\n",
+    "output_path = os.path.abspath(\"/scratch/users/md724/DataSets/UIUC/oc_integer//output/\")\n",
+    "output_filename = \"_test_network_wcc_output_post.tsv\"\n",
+    "\n",
+    "criterion_variations = [\"log10\"]\n",
+    "\n",
+    "for variant in criterion_variations:\n",
+    "    curr_output_filename = variant + output_filename\n",
+    "    print(curr_output_filename)\n",
+    "    num_clusters = ar.well_connected_components(ar_network_graph, file_path, output_path, \n",
+    "                                                output_filename=curr_output_filename,\n",
+    "                                                output_type = \"post\",\n",
+    "                                                connectedness_criterion = variant,\n",
+    "                                                connectedness_criterion_mult_value = 0.05,\n",
+    "                                                pre_filter_min_size=1, post_filter_min_size=1)\n",
+    "    print(f\"WCC found {num_clusters} clusters to be well-connected.\")\n",
+    "ak.shutdown()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ec8e86aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import arkouda as ak\n",
+    "import arachne as ar\n",
+    "import scipy as sp\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
+    "ak.connect(\"n34\", 5555)\n",
+    "# Create an Arachne graph from a test network file.\n",
+    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network.tsv\"))\n",
+    "\n",
+    "# Execute wcc with the absolute path to the generate and the create network file.\n",
+    "file_path = os.path.abspath(\"./data/wcc/test_clustering.tsv\")\n",
+    "output_path = os.path.abspath(\"./output/\")\n",
+    "output_filename = \"_test_network_wcc_output_post.tsv\"\n",
+    "\n",
+    "criterion_variations = [\"log10\"]\n",
+    "\n",
+    "for variant in criterion_variations:\n",
+    "    curr_output_filename = variant + output_filename\n",
+    "    num_clusters = ar.well_connected_components(ar_network_graph, file_path, output_path, \n",
+    "                                                output_filename=curr_output_filename,\n",
+    "                                                output_type = \"post\",\n",
+    "                                                connectedness_criterion = variant,\n",
+    "                                                connectedness_criterion_mult_value = 0.05,\n",
+    "                                                pre_filter_min_size=1, post_filter_min_size=1)\n",
+    "    print(f\"WCC found {num_clusters} clusters to be well-connected.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "83686037",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +131,7 @@
      "output_type": "stream",
      "text": [
       "Cluster files written to:  /scratch/users/md724/arkouda-njit/arachne/output/log10_test_network_wcc_output_post.tsv\n",
-      "WCC found 6 clusters to be well-connected.\n"
+      "WCC found 0 clusters to be well-connected.\n"
      ]
     }
    ],
@@ -69,7 +143,7 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n115\", 5555)\n",
+    "ak.connect(\"n116\", 5555)\n",
     "# Create an Arachne graph from a test network file.\n",
     "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_3.tsv\"))\n",
     "\n",
@@ -94,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83686037",
+   "id": "d14e9e0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,26 +179,7 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n34\", 5555)\n",
-    "# Create an Arachne graph from a test network file.\n",
-    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_3_longpath.tsv\"))\n",
-    "\n",
-    "# Execute wcc with the absolute path to the generate and the create network file.\n",
-    "file_path = os.path.abspath(\"./data/wcc/test_clustering_simple_3_longpath.tsv\")\n",
-    "output_path = os.path.abspath(\"./output/\")\n",
-    "output_filename = \"_test_network_wcc_output_post.tsv\"\n",
-    "\n",
-    "criterion_variations = [\"log10\"]\n",
-    "\n",
-    "for variant in criterion_variations:\n",
-    "    curr_output_filename = variant + output_filename\n",
-    "    num_clusters = ar.well_connected_components(ar_network_graph, file_path, output_path, \n",
-    "                                                output_filename=curr_output_filename,\n",
-    "                                                output_type = \"post\",\n",
-    "                                                connectedness_criterion = variant,\n",
-    "                                                connectedness_criterion_mult_value = 0.05,\n",
-    "                                                pre_filter_min_size=1, post_filter_min_size=1)\n",
-    "    print(f\"WCC found {num_clusters} clusters to be well-connected.\")"
+    "ak.connect(\"n82\", 5555)"
    ]
   },
   {
