Nagamochi-Ibaraki algorithm with tests

--- a/arachne/arachne_sample.ipynb
+++ b/arachne/arachne_sample.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "83686037",
    "metadata": {},
    "outputs": [
@@ -125,14 +125,6 @@
      "text": [
       "connected to arkouda server tcp://*:5555\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cluster files written to:  /scratch/users/md724/arkouda-njit/arachne/output/log10_test_network_wcc_output_post.tsv\n",
-      "WCC found 0 clusters to be well-connected.\n"
-     ]
     }
    ],
    "source": [
@@ -143,7 +135,7 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n116\", 5555)\n",
+    "ak.connect(\"n4\", 5555)\n",
     "# Create an Arachne graph from a test network file.\n",
     "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_3.tsv\"))\n",
     "\n",
@@ -162,7 +154,9 @@
     "                                                connectedness_criterion = variant,\n",
     "                                                connectedness_criterion_mult_value = 0.05,\n",
     "                                                pre_filter_min_size=1, post_filter_min_size=1)\n",
-    "    print(f\"WCC found {num_clusters} clusters to be well-connected.\")"
+    "    print(f\"WCC found {num_clusters} clusters to be well-connected.\")\n",
+    "ak.shutdown()\n",
+    "    "
    ]
   },
   {
