nin the middle of nw paper cut ibaraki

--- a/arachne/arachne_sample.ipynb
+++ b/arachne/arachne_sample.ipynb
@@ -106,24 +106,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "connected to arkouda server tcp://*:5555\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster files written to:  /scratch/users/md724/arkouda-njit/arachne/output/log10_test_network_wcc_output_post.tsv\n",
+      "WCC found 0 clusters to be well-connected.\n"
      ]
     }
    ],
@@ -135,12 +129,12 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n4\", 5555)\n",
+    "ak.connect(\"n92\", 5555)\n",
     "# Create an Arachne graph from a test network file.\n",
-    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_3.tsv\"))\n",
+    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_6.tsv\"))\n",
     "\n",
     "# Execute wcc with the absolute path to the generate and the create network file.\n",
-    "file_path = os.path.abspath(\"./data/wcc/test_clustering_simple_3.tsv\")\n",
+    "file_path = os.path.abspath(\"./data/wcc/test_clustering_simple_6.tsv\")\n",
     "output_path = os.path.abspath(\"./output/\")\n",
     "output_filename = \"_test_network_wcc_output_post.tsv\"\n",
     "\n",
