Gap Theory ready for test and adjustment

--- a/arachne/arachne_sample.ipynb
+++ b/arachne/arachne_sample.ipynb
@@ -95,20 +95,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -116,18 +102,11 @@
      ]
     },
     {
-     "ename": "RuntimeError",
-     "evalue": "No such file or directory (in open with path \"/scratch/users/md724/arkouda-njit/arachne/data/wcc/test_network_simple_6.tsv\")",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m ak\u001b[38;5;241m.\u001b[39mconnect(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mn114\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m5555\u001b[39m)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# Create an Arachne graph from a test network file.\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m ar_network_graph \u001b[38;5;241m=\u001b[39m \u001b[43mar\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_tsv_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mabspath\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m./data/wcc/test_network_simple_6.tsv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Execute wcc with the absolute path to the generate and the create network file.\u001b[39;00m\n\u001b[1;32m     13\u001b[0m file_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mabspath(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./data/wcc/test_clustering_simple_6.tsv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/.conda/envs/arkouda-dev/lib/python3.10/site-packages/typeguard/__init__.py:891\u001b[0m, in \u001b[0;36mtypechecked.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    889\u001b[0m memo \u001b[38;5;241m=\u001b[39m _CallMemo(python_func, _localns, args\u001b[38;5;241m=\u001b[39margs, kwargs\u001b[38;5;241m=\u001b[39mkwargs)\n\u001b[1;32m    890\u001b[0m check_argument_types(memo)\n\u001b[0;32m--> 891\u001b[0m retval \u001b[38;5;241m=\u001b[39m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    892\u001b[0m check_return_type(retval, memo)\n\u001b[1;32m    894\u001b[0m \u001b[38;5;66;03m# If a generator is returned, wrap it if its yield/send/return types can be checked\u001b[39;00m\n",
-      "File \u001b[0;32m~/.conda/envs/arkouda-dev/lib/python3.10/site-packages/arachne/methods.py:117\u001b[0m, in \u001b[0;36mread_tsv_file\u001b[0;34m(filepath, directed, only_edges, comment_header)\u001b[0m\n\u001b[1;32m    113\u001b[0m cmd \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mreadTSVFile\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    114\u001b[0m args \u001b[38;5;241m=\u001b[39m { \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPath\u001b[39m\u001b[38;5;124m\"\u001b[39m: filepath,\n\u001b[1;32m    115\u001b[0m          \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDirected\u001b[39m\u001b[38;5;124m\"\u001b[39m: directed,\n\u001b[1;32m    116\u001b[0m          \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCommentHeader\u001b[39m\u001b[38;5;124m\"\u001b[39m: comment_header }\n\u001b[0;32m--> 117\u001b[0m rep_msg \u001b[38;5;241m=\u001b[39m \u001b[43mgeneric_msg\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcmd\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcmd\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    118\u001b[0m returned_vals \u001b[38;5;241m=\u001b[39m (cast(\u001b[38;5;28mstr\u001b[39m, rep_msg)\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m+\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m    120\u001b[0m src \u001b[38;5;241m=\u001b[39m create_pdarray(returned_vals[\u001b[38;5;241m0\u001b[39m])\n",
-      "File \u001b[0;32m/scratch/users/md724/arkouda/arkouda/client.py:1006\u001b[0m, in \u001b[0;36mgeneric_msg\u001b[0;34m(cmd, args, payload, send_binary, recv_binary)\u001b[0m\n\u001b[1;32m   1004\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1005\u001b[0m         \u001b[38;5;28;01massert\u001b[39;00m payload \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m-> 1006\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcast\u001b[49m\u001b[43m(\u001b[49m\u001b[43mChannel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mchannel\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msend_string_message\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1007\u001b[0m \u001b[43m            \u001b[49m\u001b[43mcmd\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcmd\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmsg_args\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msize\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrecv_binary\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrecv_binary\u001b[49m\n\u001b[1;32m   1008\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1009\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m   1010\u001b[0m     \u001b[38;5;66;03m# if the user interrupts during command execution, the socket gets out\u001b[39;00m\n\u001b[1;32m   1011\u001b[0m     \u001b[38;5;66;03m# of sync reset the socket before raising the interrupt exception\u001b[39;00m\n\u001b[1;32m   1012\u001b[0m     cast(Channel, channel)\u001b[38;5;241m.\u001b[39mconnect(timeout\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n",
-      "File \u001b[0;32m/scratch/users/md724/arkouda/arkouda/client.py:529\u001b[0m, in \u001b[0;36mZmqChannel.send_string_message\u001b[0;34m(self, cmd, recv_binary, args, size, request_id)\u001b[0m\n\u001b[1;32m    527\u001b[0m \u001b[38;5;66;03m# raise errors or warnings sent back from the server\u001b[39;00m\n\u001b[1;32m    528\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m return_message\u001b[38;5;241m.\u001b[39mmsgType \u001b[38;5;241m==\u001b[39m MessageType\u001b[38;5;241m.\u001b[39mERROR:\n\u001b[0;32m--> 529\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(return_message\u001b[38;5;241m.\u001b[39mmsg)\n\u001b[1;32m    530\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m return_message\u001b[38;5;241m.\u001b[39mmsgType \u001b[38;5;241m==\u001b[39m MessageType\u001b[38;5;241m.\u001b[39mWARNING:\n\u001b[1;32m    531\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(return_message\u001b[38;5;241m.\u001b[39mmsg)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: No such file or directory (in open with path \"/scratch/users/md724/arkouda-njit/arachne/data/wcc/test_network_simple_6.tsv\")"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster files written to:  /scratch/users/md724/arkouda-njit/arachne/output/log10_test_network_wcc_output_post.tsv\n",
+      "WCC found 0 clusters to be well-connected.\n"
      ]
     }
    ],
@@ -139,12 +118,12 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n114\", 5555)\n",
+    "ak.connect(\"n84\", 5555)\n",
     "# Create an Arachne graph from a test network file.\n",
-    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_10.tsv\"))\n",
+    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_3.tsv\"))\n",
     "\n",
     "# Execute wcc with the absolute path to the generate and the create network file.\n",
-    "file_path = os.path.abspath(\"./data/wcc/test_clustering_simple_10.tsv\")\n",
+    "file_path = os.path.abspath(\"./data/wcc/test_clustering_simple_3.tsv\")\n",
     "output_path = os.path.abspath(\"./output/\")\n",
     "output_filename = \"_test_network_wcc_output_post.tsv\"\n",
     "\n",
