--- a/arachne/arachne_sample.ipynb
+++ b/arachne/arachne_sample.ipynb
@@ -56,7 +56,23 @@
    "execution_count": null,
    "id": "86b36041",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster files written to:  /scratch/users/md724/arkouda-njit/arachne/output/log10_test_network_wcc_output_post.tsv\n",
+      "WCC found 0 clusters to be well-connected.\n"
+     ]
+    }
+   ],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -65,12 +81,12 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n114\", 5555)\n",
+    "ak.connect(\"n4\", 5555)\n",
     "# Create an Arachne graph from a test network file.\n",
-    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_6.tsv\"))\n",
+    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_15.tsv\"))\n",
     "\n",
     "# Execute wcc with the absolute path to the generate and the create network file.\n",
-    "file_path = os.path.abspath(\"./data/wcc/test_clustering_simple_6.tsv\")\n",
+    "file_path = os.path.abspath(\"./data/wcc/test_clustering_simple_15.tsv\")\n",
     "output_path = os.path.abspath(\"./output/\")\n",
     "output_filename = \"_test_network_wcc_output_post.tsv\"\n",
     "\n",
@@ -102,7 +118,7 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n78\", 5555)\n",
+    "ak.connect(\"n4\", 5555)\n",
     "# Create an Arachne graph from a test network file.\n",
     "#ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_3.tsv\"))\n",
     "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"/scratch/users/md724/DataSets/UIUC/cit_patents/cit_patents_cleaned.tsv\"))\n",
@@ -140,7 +156,7 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n78\", 5555)\n",
+    "ak.connect(\"n4\", 5555)\n",
     "# Create an Arachne graph from a test network file.\n",
     "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network_simple_3.tsv\"))\n",
     "\n",
@@ -159,7 +175,8 @@
     "                                                connectedness_criterion = variant,\n",
     "                                                connectedness_criterion_mult_value = 0.05,\n",
     "                                                pre_filter_min_size=1, post_filter_min_size=1)\n",
-    "    print(f\"WCC found {num_clusters} clusters to be well-connected.\")"
+    "    print(f\"WCC found {num_clusters} clusters to be well-connected.\")\n",
+    "ak.shutdown()    "
    ]
   },
   {
