actually return mappings

--- a/arachne/harvard_code.ipynb
+++ b/arachne/harvard_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "id": "f651e065",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "04768463",
    "metadata": {},
    "outputs": [],
@@ -77,16 +77,16 @@
     "                                (src3, dst3, connection_type3, color3, \"3\"),\n",
     "                                (src2, dst2, connection_type2, color2, \"2\"),\n",
     "                                (src7, dst7, connection_type7, color7, \"7\")\n",
-    "                                (src5, dst5, connection_type5, color5, \"5\"),\n",
-    "                                (src4, dst4, connection_type4, color4, \"4\"),\n",
-    "                                (src1, dst1, connection_type1, color1, \"1\"),\n",
-    "                                (src6, dst6, connection_type6, color6, \"6\"),\n",
+    "                                # (src5, dst5, connection_type5, color5, \"5\"),\n",
+    "                                # (src4, dst4, connection_type4, color4, \"4\"),\n",
+    "                                # (src1, dst1, connection_type1, color1, \"1\"),\n",
+    "                                # (src6, dst6, connection_type6, color6, \"6\"),\n",
     "                            ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "id": "a7ca5c52",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "id": "2753acf6",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "id": "5e543d90",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "id": "dd51b497",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "id": "671cb378",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "id": "c67c3e9f",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "id": "afe29c9f",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "id": "4a6f4bdd",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "id": "df78f686",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "id": "938407f8",
    "metadata": {},
    "outputs": [
@@ -303,24 +303,24 @@
      "output_type": "stream",
      "text": [
       "Querying for subgraph0...\n",
-      "Finding 696_460 motifs took: 2.4316930770874023 seconds.\n",
-      "Reshaping isomorphisms took: 0.20920419692993164 seconds.\n",
-      "Generating mappings took: 0.6745426654815674 seconds.\n",
+      "Finding 696_460 motifs took: 2.450429677963257 seconds.\n",
+      "Reshaping isomorphisms took: 0.18763327598571777 seconds.\n",
+      "Generating mappings took: 0.6758084297180176 seconds.\n",
       "\n",
       "Querying for subgraph3...\n",
-      "Finding 5_048 motifs took: 2.925481081008911 seconds.\n",
-      "Reshaping isomorphisms took: 0.023119449615478516 seconds.\n",
-      "Generating mappings took: 0.0066602230072021484 seconds.\n",
+      "Finding 5_048 motifs took: 2.9299545288085938 seconds.\n",
+      "Reshaping isomorphisms took: 0.02286529541015625 seconds.\n",
+      "Generating mappings took: 0.00629734992980957 seconds.\n",
       "\n",
       "Querying for subgraph2...\n",
-      "Finding 191_690 motifs took: 3.6215598583221436 seconds.\n",
-      "Reshaping isomorphisms took: 0.06592702865600586 seconds.\n",
-      "Generating mappings took: 0.23534917831420898 seconds.\n",
+      "Finding 191_690 motifs took: 3.5665934085845947 seconds.\n",
+      "Reshaping isomorphisms took: 0.06579899787902832 seconds.\n",
+      "Generating mappings took: 0.26287078857421875 seconds.\n",
       "\n",
       "Querying for subgraph7...\n",
-      "Finding 91_718 motifs took: 1.5865280628204346 seconds.\n",
-      "Reshaping isomorphisms took: 0.05943799018859863 seconds.\n",
-      "Generating mappings took: 0.14245223999023438 seconds.\n",
+      "Finding 91_718 motifs took: 1.5638353824615479 seconds.\n",
+      "Reshaping isomorphisms took: 0.05923175811767578 seconds.\n",
+      "Generating mappings took: 0.16738390922546387 seconds.\n",
       "\n"
      ]
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "3ae6d03c",
    "metadata": {},
    "outputs": [],
@@ -375,9 +375,12 @@
     "\n",
     "    matches = 0\n",
     "    curr_mapping_id = 0\n",
+    "    final_mappings = []\n",
     "    for src,dst,vals in zip(isos_by_edges_src_ndarray,isos_by_edges_dst_ndarray,vals_ndarray):\n",
     "        if subgraph_id == 0 or subgraph_id == 1:\n",
     "            if len(np.unique(vals)) == 1:\n",
+    "                final_mappings.append(isos_by_vertices[curr_mapping_id])\n",
+    "                curr_mapping_id += 1\n",
     "                matches += 1\n",
     "                continue\n",
     "        else:\n",
@@ -388,18 +391,20 @@
     "                else:\n",
     "                    inner_matches[val] += 1\n",
     "            if sorted(inner_matches.values()) == sorted(dict_to_check_against.values()):\n",
+    "                final_mappings.append(isos_by_vertices[curr_mapping_id])\n",
     "                matches += 1\n",
     "            curr_mapping_id += 1\n",
     "\n",
     "    end = time.time()\n",
     "    print(f\"Before post processing number of motifs found was {number_isos_found} and after was {matches}\")\n",
+    "    print(matches == len(final_mappings))\n",
     "    print(f\"Post processing took: {end-start} seconds.\")\n",
     "    print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "id": "be6b96fe",
    "metadata": {},
    "outputs": [
@@ -409,19 +414,23 @@
      "text": [
       "Post processing subgraph0...\n",
       "Before post processing number of motifs found was 696460 and after was 696460\n",
-      "Post processing took: 7.278878450393677 seconds.\n",
+      "True\n",
+      "Post processing took: 7.33778190612793 seconds.\n",
       "\n",
       "Post processing subgraph3...\n",
       "Before post processing number of motifs found was 5048 and after was 5048\n",
-      "Post processing took: 2.492433547973633 seconds.\n",
+      "True\n",
+      "Post processing took: 2.4953129291534424 seconds.\n",
       "\n",
       "Post processing subgraph2...\n",
       "Before post processing number of motifs found was 191690 and after was 191690\n",
-      "Post processing took: 3.1195626258850098 seconds.\n",
+      "True\n",
+      "Post processing took: 3.1390717029571533 seconds.\n",
       "\n",
       "Post processing subgraph7...\n",
       "Before post processing number of motifs found was 91718 and after was 44657\n",
-      "Post processing took: 2.6147735118865967 seconds.\n",
+      "True\n",
+      "Post processing took: 2.6034629344940186 seconds.\n",
       "\n"
      ]
     }
