mappings with outputs

--- a/arachne/harvard_code.ipynb
+++ b/arachne/harvard_code.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "04768463",
    "metadata": {},
    "outputs": [],
@@ -76,11 +76,11 @@
     "                                (src0, dst0, connection_type0, color0, \"0\"),\n",
     "                                (src3, dst3, connection_type3, color3, \"3\"),\n",
     "                                (src2, dst2, connection_type2, color2, \"2\"),\n",
-    "                                (src7, dst7, connection_type7, color7, \"7\")\n",
-    "                                # (src5, dst5, connection_type5, color5, \"5\"),\n",
-    "                                # (src4, dst4, connection_type4, color4, \"4\"),\n",
-    "                                # (src1, dst1, connection_type1, color1, \"1\"),\n",
-    "                                # (src6, dst6, connection_type6, color6, \"6\"),\n",
+    "                                (src7, dst7, connection_type7, color7, \"7\"),\n",
+    "                                (src5, dst5, connection_type5, color5, \"5\"),\n",
+    "                                (src4, dst4, connection_type4, color4, \"4\"),\n",
+    "                                (src1, dst1, connection_type1, color1, \"1\"),\n",
+    "                                (src6, dst6, connection_type6, color6, \"6\")\n",
     "                            ]"
    ]
   },
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "3ae6d03c",
    "metadata": {},
    "outputs": [],
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "id": "be6b96fe",
    "metadata": {},
    "outputs": [
@@ -415,22 +415,22 @@
       "Post processing subgraph0...\n",
       "Before post processing number of motifs found was 696460 and after was 696460\n",
       "True\n",
-      "Post processing took: 7.33778190612793 seconds.\n",
+      "Post processing took: 7.382020711898804 seconds.\n",
       "\n",
       "Post processing subgraph3...\n",
       "Before post processing number of motifs found was 5048 and after was 5048\n",
       "True\n",
-      "Post processing took: 2.4953129291534424 seconds.\n",
+      "Post processing took: 2.487938165664673 seconds.\n",
       "\n",
       "Post processing subgraph2...\n",
       "Before post processing number of motifs found was 191690 and after was 191690\n",
       "True\n",
-      "Post processing took: 3.1390717029571533 seconds.\n",
+      "Post processing took: 3.162606716156006 seconds.\n",
       "\n",
       "Post processing subgraph7...\n",
       "Before post processing number of motifs found was 91718 and after was 44657\n",
       "True\n",
-      "Post processing took: 2.6034629344940186 seconds.\n",
+      "Post processing took: 2.5913400650024414 seconds.\n",
       "\n"
      ]
     }
